# AUTestTools

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  image.qrc  main.cpp  test.cpp
Doc/: AutoTest.vsdx  AutoTest设计文档.docx
Doc/AuTestProjectDoc/代码分析/: clang相关知识.md
Doc/AuTestProjectDoc/代码分析/1.LLVM环境配置/: LLVM环境搭建.md
Doc/AuTestProjectDoc/代码分析/2.构建libTooling工具/: 构建libTooling工具.md
Doc/AuTestProjectDoc/代码分析/3.ClangAST基础/: ClangAST基础学习.md
Doc/AuTestProjectDoc/代码分析/4.ClangASTMatcher基础学习/: CLangASTMatcher基础学习.md
Doc/模块设计文档/: 代码分析功能模块.vsdx  代码分析功能模块设计.docx  单元测试代码生成功能模块设计.docx  单元测试代码生成功能模块设计.vsdx
Include/: LoopConvert.h
Include/Function/: AnalyseCodeTree.h  LoopConvert.h
Include/Infra/: FactoryTemplate copy.h  FactoryTemplate.h  types.h
Include/fakeit/: Action.hpp  ActionSequence.hpp  ActualInvocation.hpp  ActualInvocationHandler.hpp  ActualInvocationsSource.hpp  DefaultEventFormatter.hpp  DefaultEventLogger.hpp  DefaultFakeit.hpp  DomainObjects.hpp  EventFormatter.hpp  EventHandler.hpp  FakeFunctor.hpp  FakeitContext.hpp  FakeitEvents.hpp  FakeitExceptions.hpp  Functional.hpp  Invocation.hpp  MatchAnalysis.hpp  MatchersCollector.hpp  MethodMockingContext.hpp  Mock.hpp  MockImpl.hpp  Prototype.hpp  Quantifier.hpp  RecordedMethodBody.hpp  Sequence.hpp  SequenceVerificationExpectation.hpp  SequenceVerificationProgress.hpp  SortInvocations.hpp  SpyFunctor.hpp  SpyingContext.hpp  StubbingContext.hpp  StubbingImpl.hpp  StubbingProgress.hpp  ThrowFalseEventHandler.hpp  UnverifiedFunctor.hpp  UsingFunctor.hpp  UsingProgress.hpp  VerifyFunctor.hpp  VerifyNoOtherInvocationsFunctor.hpp  (+8 more)
Include/fakeit/catch/: CatchFakeit.hpp  fakeit.hpp  fakeit_instance.hpp
Include/function/: AnalysisMessage.h  AnalysisMessageHelper.h  FunctionDeclAnalysis.h  SourceCodeAnalysisFunc.h  SourceCodeAnalysisiFunc.h  UnitTestCodeProduce.h  utilities.h
Include/mockutils/: DefaultValue.hpp  Destructible.hpp  DynamicProxy.hpp  FakeObject.hpp  Finally.hpp  Formatter.hpp  Macros.hpp  MethodInvocationHandler.hpp  MethodProxy.hpp  MethodProxyCreator.hpp  TupleDispatcher.hpp  TuplePrinter.hpp  VTUtils.hpp  VirtualOffestSelector.hpp  VirtualTable.hpp  smart_ptr.hpp  to_string.hpp  type_utils.hpp  union_cast.hpp
Include/mockutils/gcc/: VirtualTable.hpp  is_simple_inheritance_layout.hpp
Include/mockutils/mscpp/: VirtualTable.hpp
Include/python/: object.h
Include/spdlog/: common.h  spdlog.h
Include/window/: mainwindow.h
Lib/: CMakeLists.txt  LoopConvertTooling.lib  _tkinter.lib  python3.lib  python38.lib
Src/: CMakeLists.txt  main.cpp  test.cpp
Src/Function/: AnalyseCodeTree.cpp
Src/function/AnalysisCode/: CxxMethodDeclMessageAnalysis.cpp  CxxMethodDeclMessageAnalysis.h  FuncDeclASTFrontendAction.h  FuncDeclASTFrontendAction.hpp  FuncDeclWithCallexprMessageAnalysis.cpp  FuncDeclWithCallexprMessageAnalysis.h  FunctionDeclAnalysis.cpp  FunctionDeclAnalysis.h  FunctionDefLister.hpp  SourceCodeMatcherBase.h  SourceCodeMessageAnalysis.cpp  SourceCodeMessageAnalysis.h  SourceCodeMessageAnlysis.h
Src/function/AnalysisCode/CustomASTFrontendMethod/: FuncDeclASTFrontendAction.hpp  FunctionDeclAnalysis.h  README.md
Src/function/AnalysisCode/Listerner/: ClassMemberDelListern.hpp  FunctionDefListern.hpp  SourceCodeMatcherBase.h
Src/function/UnitTestCodeProduce/: FunctionTemplate.h  ProduceCodeFunc.py  UnitTestCodeProduce.cpp
Src/window/: Arrow.cpp  DiagramItem.cpp  DiagramItem.h  DiagramScene.cpp  DiagramSceneWindow.cpp  DiagramSceneWindow.h  DiagramTextItem.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Src/window/DiagramWindow/: Arrow.cpp  Arrow.h  DiagramItem.cpp  DiagramItem.h  DiagramScene.cpp  DiagramScene.h  DiagramSceneWindow.cpp  DiagramSceneWindow.h  DiagramTextItem.cpp  DiagramTextItem.h
Src/window/EditWindow/: EditWindow.cpp  EditWindow.h
Src/window/ProduceWithEditWindow/: ProduceWithEditWindow.cpp  ProduceWithEditWindow.h
test/: CMakeLists.txt  FakeItTest.cpp  LoopConvert.cpp  TestAnalyCppCodeByLiTooling.cpp  TestClassMemberDeclAnalysis.cpp  TestFactoryTemplate.cpp  TestFuncDeclMatcher.cpp  TestFunctionDeclAnalysis.cpp  TestModernCppAC.cpp  TestUnitTestCodeMockProduce.cpp  main.cpp  test.cxx  test.h
test/AnalyCodeFunctionTest/: FunctionDeclAnalysis.h  TestModernCppAC.cpp  UseLibTooling2VisitorAST.cpp  UseLibTooling2VisitorAST.h  UseLibclang2VisitorAST.cpp  UselibMatcherAnalyseCodeTree.cpp
test/Tools/: InputParamSaver.hpp
test/TrainingCode/: CMakeLists.txt  FunctionInfoTestCode.cxx  FunctionInfoTestCode.h  TestMethodTemplate.cxx  TestMethodTemplate.h  UnitTestCodeProduceTemplate.cxx  UnitTestCodeProduceTemplate.h  main.cpp  someGeneratedCode.hpp  sometestcode.hpp  test.cxx  test.h
